--- a/app/globals.css
+++ b/app/globals.css
@@ -161,6 +161,24 @@ body {
   border-radius: 50px;
 }
 
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  height: 0;
+  overflow: hidden;
+  border-radius: 1.5rem;
+  box-shadow: 0 25px 50px -12px rgba(0, 0, 0, 0.25);
+}
+.video-container iframe,
+.video-container .placeholder-img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .accord-heading-l1 {
   font-family: var(--font-heading);
   font-size: 32px;
